[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "qdl-mcp-server"
version = "0.1.0"
description = "MCP server for querying the Qatar Digital Library (QDL) IIIF API"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.0.0",
]

[project.scripts]
qdl-mcp-server = "qdl_mcp_server.server:main"
